--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
     }
 </style>
-<body>
+<body background-color="pink">
     <center>
     <table class="content">
         <caption><b>January</b></caption>
